# depscan

./: .gitignore  LICENSE  README.md  license-report.csv  pyproject.toml
depscan/: cli.py  custom_formatter.py  git_sync.py  github_api.py  license_category.py  paths.py  registry.py  report.py  scan_docker.py  scan_node.py  scan_python.py
tests/: test_license_category.py  test_paths.py  test_pyproject_setup.py  test_registry.py  test_scan_docker.py  test_scan_node.py  test_scan_python.py
