[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "depscan"
version = "0.1.0"
description = "Scan GitHub org repos for npm/PyPI dependencies and registry licenses"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "requests>=2.28.0",
    "openpyxl>=3.1.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
depscan = "depscan.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["depscan*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
